# test_opencv

./: 192.168.10-metadata.json  CMakeLists.txt  calibration_result.yaml  package.xml  stereo_calib.yaml
capture/: extrinsic.txt  extrinsic_lidar_to_camera.txt  pointcloud.pcd
src/: calli_error.py  cv_callibration.cpp  cv_cam_lidar_cali.cpp  cv_random.cpp  cv_stereo.cpp  pcd_publisher.cpp  test.py
test_opencv/: CMakeLists.txt  package.xml
test_opencv/src/: cv_callibration.cpp
